# matrix-multiplication

./: .gitignore  CMakeLists.txt  README.md
algo/: naive_hybrid.cpp  naive_mpi.cpp  naive_omp.cpp  naive_seq.cpp  openblas_wrapper.cpp  strassen_hybrid.cpp  strassen_mpi.cpp  strassen_omp.cpp  strassen_seq.cpp
include/: algorithms.hpp  ansi_codes.hpp  cli_menu.hpp  cli_prompts.hpp  config.hpp  csv_io.hpp  matrix.hpp  terminal.hpp  timer.hpp  verification.hpp
src/: cli_menu.cpp  cli_prompts.cpp  csv_io.cpp  main.cpp  matrix.cpp  terminal.cpp  timer.cpp  verification.cpp
